@@ -3,7 +3,7 @@
     "name":"LazyLib",
     "author":"LazyWizard",
     "utility":"true",
-    "version":"2.0",
+    "version":"1.6",
     "description":"A collection of libraries to aid with modding. Not a mod in itself, but required by certain other mods.\n\nThis release is targeted towards Starsector version 0.6a.",
     "gameVersion":"0.6a",
     "jars":["jars/LazyLib.jar",],
